--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
-    <img src="https://octodex.github.com/images/vinyltocat.png">
+    <img src="https://avatars2.githubusercontent.com/u/1292797?v=4">
     Hello there, awesome person!
   </body>
 </html>
