Add list of favorite sites

--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
     <h1>Hello, world!</h1>
     <img src="https://avatars2.githubusercontent.com/u/1292797?v=4">
     Hello there, awesome person!
+    <ul>
+      <li>Production</li>
+      <li>xkcd</li>
+      <li>Rands in Repose</li>
+      <li>React</li>
+    </ul>
   </body>
 </html>
