Add links to list

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <img src="https://avatars2.githubusercontent.com/u/1292797?v=4">
     Hello there, awesome person!
     <ul>
-      <li>Production</li>
-      <li>xkcd</li>
-      <li>Rands in Repose</li>
-      <li>React</li>
+      <li><a href="https://www.google.com">Production</a></li>
+      <li><a href="https://xkcd.com">xkcd</a></li>
+      <li><a href="http://randsinrepose.com">Rands in Repose</a></li>
+      <li><a href="https://reactjs.org/">React</a></li>
     </ul>
   </body>
 </html>
